--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   	<script type="text/javascript" src="js/functions.js"></script>
 
-<!-- End Document
-================================================== -->
+<!-- End Document -->
 </body>
 </html>
