added some of the tags that were now styled by style.css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
 </head>
 <body>
 	<div class="container">
-		<img src="coming-soon.png">
+		<h1>Hi, this is the html portion of the slimfit framework</h1>
+		<h1>And this is the largest header.</h1>
+		<h2>Here's the second largest.</h2>
+		<h3>And the bronze medal goes to number three.</h3>
+		<p>
+			A bit of text. Some <small>small text here</small>. Oh yeah, here's an example of some <b>bold text too</b>.
+		</p>
 	</div>
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
